Сделал скрины работы

--- a/pract_6/index.html
+++ b/pract_6/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Практическая работа №6</p>
+    <p>Вариант 5</p>
 
     <form action="zad.php" method="post">
 
@@ -16,6 +18,7 @@
         <input type="text" name="tname" placeholder="Отчество">
         <input type="tel" name="telephone" pattern="[0-9]{11}" placeholder="Телефон">
         <input type="email" name="email" placeholder="email">
+        
         <p><input type="submit" value="Отправить"/></p>
         
     </form>
