--- a/pract_9/index.html
+++ b/pract_9/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link rel="stylesheet" href="style.css">
 		<title>Форма</title>
 	</head>
 	<body>
 		<div>
-			<p>Практическая работа №9
-			<p>Вариант 5
+			<p>Практическая работа №9</p>
+			
 				<form action="action.php" method="post">
 
 					<input type="text" name="secondName" placeholder="фамилия">
