--- a/pract_10/index.html
+++ b/pract_10/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type">
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="style.css">
 		<title>Вход</title>
 	</head>
 	<body>
