--- a/pract_11/index.html
+++ b/pract_11/index.html
@@ -7,14 +7,13 @@
 	</head>
 	<body>
 		<div>
-			<p>Практическая работа №8
-			<p>Вариант 5
+			<p>Практическая работа №11</p>
 				<form action="action.php" method="post">
 
 					<input type="text" name="lname" placeholder="фамилия">
 					<input type="text" name="fname" placeholder="Имя">
 					<input type="text" name="tname" placeholder="Отчество">
-					<input type="tel" name="telephone" pattern="[0-9]{11}" placeholder="Телефон">
+					<input type="tel" name="telephone" pattern="[0-9]{11}" placeholder="Телефон 11 цифр">
 					<input type="email" name="email" placeholder="email">
 
 					<p><input type="submit" value="Отправить"/></p>
