--- a/pract_7/index.html
+++ b/pract_7/index.html
@@ -2,24 +2,26 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link rel="stylesheet" href="style.css">
 		<title>Форма</title>
 	</head>
 	<body>
-		<div>
-			<p>Практическая работа №7
-			<p>Вариант 5
-				<form action="action.php" method="post">
+		<div> 1239 10 11
+			<p>Практическая работа №7</p>
+			<p>Вариант 5</p>
+			<form action="action.php" method="post" enctype="multipart/form-data">
+				<ul>
+					<li>
+						<input class="txt" type="text" name="secondName" id="secondName" placeholder="Фамилия*" value="">
+						<input class="txt" type="text" name="firstName" id="firstName" placeholder="Имя*" value="">
+						<input class="txt" type="text" name="thirdName" id="thirdName" placeholder="Отчество*" value="">
+						<input class="txt" type="tel" name="phone" id="phone" placeholder="Телефон (начинать с +8, +7)*" value="">
+						<input class="txt" type="text" name="email" id="email" placeholder="E-mail*" value="">
+						<p>Аватарка:</p> <input type="file" name="avatar" id="avatar">
 
-					<input type="text" name="lname" placeholder="фамилия">
-					<input type="text" name="fname" placeholder="Имя">
-					<input type="text" name="tname" placeholder="Отчество">
-					<input type="tel" name="telephone" pattern="[0-9]{11}" placeholder="Телефон">
-					<input type="email" name="email" placeholder="email">
-					<span>Аватарка:</span> <input type="file" name="avatar" id="avatar">
-
-					<p><input type="submit" value="Отправить"/></p>
-					
-				</form>
+						<input type="submit" name="sub" value="Отправить">
+				</ul>
+			</form>
 		</div>
 	</body>
 </html>
