--- a/prakt 8 last/index.html
+++ b/prakt 8 last/index.html
@@ -12,9 +12,9 @@
     <form action="action.php" method="post">
 
         <div class="info_pers">
-            <input type="text" required pattern="^[a-zA-Zа-яА-Я]+$" name="familiy"   placeholder="Фамилия">
-            <input type="text" required pattern="^[a-zA-Zа-яА-Я]+$" name="name"      placeholder="Имя">
-            <input type="text" required pattern="^[a-zA-Zа-яА-Я]+$" name="otch"      placeholder="Отчество">
+            <input type="text" required name="familiy"   placeholder="Фамилия">
+            <input type="text" required name="name"      placeholder="Имя">
+            <input type="text" required name="otch"      placeholder="Отчество">
         </div>
 
         <div class="birthday">
