--- a/prakt 11 last/index.html
+++ b/prakt 11 last/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>prakt 8</title>
+    <title>prakt 11</title>
 </head>
 <body>
 
     <form action="action.php" method="post">
 
         <div class="info_pers">
-            <input type="text" required pattern="^[a-zA-Zа-яА-Я]+$" name="familiy"   placeholder="Фамилия">
-            <input type="text" required pattern="^[a-zA-Zа-яА-Я]+$" name="name"      placeholder="Имя">
-            <input type="text" required pattern="^[a-zA-Zа-яА-Я]+$" name="otch"      placeholder="Отчество">
+            <input type="text" required name="familiy"   placeholder="Фамилия">
+            <input type="text" required name="name"      placeholder="Имя">
+            <input type="text" required name="otch"      placeholder="Отчество">
         </div>
 
         <div class="birthday">
             <span>День рождения</span>
-            <input type="date" name="birthday" placeholder="">
+            <input type="date" name="birthday">
         </div>
 
         <div class="pol">
