--- a/prakt 11 last/index.html
+++ b/prakt 11 last/index.html
@@ -57,9 +57,9 @@
         <div class="hobbi">
             <p>Список увлечений</p>
             <ul>
-                <p><input type="checkbox" name="hobbi[0]"  value="Игры">Игры</p>
-                <p><input type="checkbox" name="hobbi[1]"  value="Программирование">Программирование</p>
-                <p><input type="checkbox" name="hobbi[2]"  value="Готовка">Готовка</p>
+                <p><input type="checkbox" name="hobbis[0]"  value="Игры">Игры</p>
+                <p><input type="checkbox" name="hobbis[1]"  value="Программирование">Программирование</p>
+                <p><input type="checkbox" name="hobbis[2]"  value="Готовка">Готовка</p>
             </ul>
         </div>
 
